--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 	<body>
 		<script type="text/x-handlebars" data-template-name="tweets" >
 			{{#each tweets tagName="ul"}}
-				<li>{{text}}</li>
+				<li><b>{{from_user}}</b> {{text}}</li>
 			{{/each}}
 		</script>
 		
 		<script type="text/x-handlebars" data-template-name="questions" >
 			{{#each questions tagName="ul" }}
-				<li><a {{bindAttr href="link"}} >{{title}}</a></li>
+				<li>{{score}}/{{answer_count}}<a {{bindAttr href="link"}} >{{title}}</a></li>
 			{{/each}}
 		</script>
 		
