add links to Twitter Search, GitHub and StackOverflow

--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
 		<div class="container-fluid">
 		  <div class="row-fluid">
 		    <div class="span3 tweets">
-		      Tweets
+		      <a href="http://twitter.com/#!/search/realtime/emberjs">Tweets</a>
 		    </div>
 		    <div class="span4 github">
-		      GitHub Events
+		      <a href="https://github.com/emberjs/ember.js">GitHub Events</a>
 		    </div>
 		    <div class="span4 stackoverflow">
-		      StackOverflow questions
+		      <a href="http://stackoverflow.com/questions/tagged/emberjs">StackOverflow questions</a>
 		    </div>
 		  </div>
 		</div>
