add echo Handlebars helper, needed to output action property of GollumEvent#pages
simply using {{action}} or {{this.action}} instead of {{echo "action"}} doesn't work since action is a special property on the view??

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		<script type="text/x-handlebars" data-template-name="GollumEvent-template" >
 			{{view DB.ActorView actorBinding="event.actor"}} modified the <a href="https://github.com/emberjs/ember.js/wiki">wiki</a> <br/>
 			{{#each event.payload.pages }}
-			  <span>{{action}} <a {{bindAttr href="html_url"}}>{{page_name}}</a></span>
+			  <span>{{echo "action"}} <a {{bindAttr href="html_url"}}>{{page_name}}</a></span>
 			{{/each}}
 		</script>
 		
