--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					{{ago "created_at"}}:
 					<li><strong><a href="http://twitter.com/#!/{{unbound from_user}}/status/{{unbound id_str}}">@{{from_user}}</a></strong> {{parseTweet}}</li>
 				{{else}}
-					loading latest tweets ...
+					loading latest Tweets ...
 				{{/each}}
 			</ul>
 		</script>
