--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 	<head>
 		<title>Ember.js Dashboard</title>
 
-		<link rel="stylesheet" href="css/bootstrap.css" type="text/css" media="screen"  charset="utf-8">
-		<link rel="stylesheet" href="css/style.css" type="text/css" media="screen" charset="utf-8">
-		<script src="js/jquery-1.7.2.min.js" type="text/javascript" charset="utf-8" ></script>
-		<script src="js/ember-0.9.6.min.js" type="text/javascript" charset="utf-8" ></script>
-		<script src="js/twitter-text-1.4.16.min.js" type="text/javascript" charset="utf-8"></script>
-		<script src="js/moment.min.js" type="text/javascript" charset="utf-8"></script>
-		<script src="js/app.js" type="text/javascript" charset="utf-8" ></script>
+		<link rel="stylesheet" href="assets/app.css" type="text/css" media="screen" title="no title" charset="utf-8">
+		<script src="assets/loader.js" type="text/javascript" charset="utf-8"></script>
+		<script src="assets/app.js" type="text/javascript" charset="utf-8"></script>
+		<script type="text/javascript">
+	    loader.require('ember-skeleton/main');
+	  </script>
 	</head>
 	<body>
 		<a href="https://github.com/pangratz/ember.js-dashboard"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://a248.e.akamai.net/assets.github.com/img/4c7dc970b89fd04b81c8e221ba88ff99a06c6b61/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67" alt="Fork me on GitHub"></a>
