--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<script src="assets/loader.js" type="text/javascript" charset="utf-8"></script>
 		<script src="assets/app.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
-	    loader.require('ember-skeleton/main');
+	    loader.require('dashboard/main');
 	  </script>
 	</head>
 	<body>
