add tests for handlebars-heleprs

--- a/tests/index.html
+++ b/tests/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
   <meta charset="UTF-8" />
-  <title>QUnit Test Suite</title>
+  <title>Dashboard Test Suite</title>
   <link rel="stylesheet" href="qunit/qunit.css" />
   <script src="qunit/qunit.js"></script>
 </head>
 <body>
 	<div id="qunit"></div>
-	<div id="qunit-fixture">test markup</div>
+	<div id="qunit-fixture"></div>
   <script src="../assets/loader.js"></script>
   <script src="../assets/app.js"></script>
   <script src="../assets/app-tests.js"></script>
