--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 	  </script>
 	</head>
 	<body>
-		<a href="https://github.com/pangratz/ember.js-dashboard"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://a248.e.akamai.net/assets.github.com/img/4c7dc970b89fd04b81c8e221ba88ff99a06c6b61/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67" alt="Fork me on GitHub"></a>
+		<a href="https://github.com/pangratz/ember.js-dashboard">
+			<img style="position: absolute; top: 0; right: 0; border: 0;" src="assets/img/fork_me_ribbon.png" alt="Fork me on GitHub">
+		</a>
 		<div class="container-fluid">
 			<h1>Ember.js Dashboard</h1>
 			<div class="row-fluid">
