--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 	<head>
 		<title>Ember.js Dashboard</title>
-
 		<link rel="stylesheet" href="assets/app.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	</head>
 	<body>
@@ -18,11 +17,11 @@
 				</div>
 				<div class="span3">
 					<h2><a href="https://github.com/emberjs/ember.js">GitHub</a></h2>
-					<div class="github" >loading latest GitHub events ...</div>
+					<div class="github" >loading latest events on GitHub</div>
 				</div>
 				<div class="span3">
 					<h2><a href="http://stackoverflow.com/questions/tagged/emberjs">StackOverflow</a></h2>
-					<div class="stackoverflow" >loading latest StackOverflow questions ...</div>
+					<div class="stackoverflow" >loading latest questions on StackOverflow ...</div>
 				</div>
 				<div class="span3">
 					<h2><a href="http://www.reddit.com/r/emberjs/">r/emberjs</a></h2>
