--- a/index.html
+++ b/index.html
@@ -3,6 +3,19 @@
   <head>
     <title>Ember.js Dashboard</title>
     <link rel="stylesheet" href="assets/app.css" type="text/css" media="screen" title="no title" charset="utf-8">
+    <script type="text/javascript">
+
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-29337991-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+
+    </script>
   </head>
   <body>
     <a href="https://github.com/pangratz/ember.js-dashboard">
