style the header with actual logo

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <img style="position: absolute; top: 0; right: 0; border: 0;" src="assets/img/fork_me_ribbon.png" alt="Fork me on GitHub">
     </a>
     <header>
-      <h1 class="container-fluid">Ember.js Dashboard</h1>
+    <h1 class="container-fluid"><img src="assets/img/ember_logo.png">Dashboard</h1>
     </header>
     <div class="container-fluid">
       <div class="row-fluid">
